src/bootstrap/src/core/builder/cli_paths/snapshots/x_dist_trustc.snap
---
source: src/core/builder/cli_paths/tests.rs
expression: dist trustc
---
[Dist] dist::Rustc
    targets: [x86_64-unknown-linux-gnu]
    - Set({dist::trustc})
