src/bootstrap/src/core/builder/cli_paths/snapshots/x_install.snap
---
source: src/core/builder/cli_paths/tests.rs
expression: install
---
[Install] install::Docs
    targets: [aarch64-unknown-linux-gnu]
    - Set({install::src/doc})
[Install] install::Std
    targets: [aarch64-unknown-linux-gnu]
    - Set({install::library/std})
    - Set({install::rust-std})
    - Set({install::trust-std})
[Install] install::Rustc
    targets: [x86_64-unknown-linux-gnu]
    - Set({install::compiler/rustc})
    - Set({install::rustc})
    - Set({install::trustc})
[Install] install::LlvmTools
    targets: [x86_64-unknown-linux-gnu]
    - Set({install::trust-llvm-tools})
