src/bootstrap/src/core/builder/cli_paths/snapshots/x_install_rustc.snap
---
source: src/core/builder/cli_paths/tests.rs
expression: install rustc
---
[Install] install::Rustc
    targets: [x86_64-unknown-linux-gnu]
    - Set({install::compiler/rustc})
    - Set({install::rustc})
