src/bootstrap/src/core/builder/cli_paths/snapshots/x_install_trust_std.snap
---
source: src/core/builder/cli_paths/tests.rs
expression: install trust-std
---
[Install] install::Std
    targets: [aarch64-unknown-linux-gnu]
    - Set({install::trust-std})
