src/bootstrap/src/core/builder/cli_paths/snapshots/x_install_trustc.snap
---
source: src/core/builder/cli_paths/tests.rs
expression: install trustc
---
[Install] install::Rustc
    targets: [x86_64-unknown-linux-gnu]
    - Set({install::trustc})
