src/bootstrap/src/core/builder/cli_paths/snapshots/x_test_coverage.snap
---
source: src/core/builder/cli_paths/tests.rs
expression: test coverage
---
[Test] test::Coverage
    targets: [aarch64-unknown-linux-gnu]
    - Suite(test::tests/coverage)
